# geotemporal_origin

./: .gitignore  Cargo.toml  LICENSE  README.md  dogs.txt  hotdog.db
.github/workflows/: trunk-gh-pages.yml
assets/: main.css
geotemporal_average/: Cargo.toml
geotemporal_average/src/: lib.rs
interface/: Cargo.toml  index.html  release-trunk.toml
interface/src/: main.rs
nominatim_api/: Cargo.toml
nominatim_api/src/: client.rs  errors.rs  lib.rs  parameters.rs  search.rs  types.rs
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
