[package]
name = "nominatim_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
thiserror = "2.0.11"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-macros = "2.5.0"
url = "2.5.4"
futures = "0.3.31"
